--- a/uml-8778.md
+++ b/uml-8778.md
@@ -19,6 +19,9 @@ Diagrama de sequência.
 Diagrama de atividade.
 
 3. Exemplo pratico de sua vida cotidiana
+
+um exemplo e a classe pessoa que possui nome, altura, peso, profissão, sobrenome, genero
+
  4 . Sistemas concorrentes ao Git hub e uma diferença
 
 •	Google Docs: Git hub Não tem um bom suporte e não possui mensagens instantaneas;
